[package]
name = "kvs"
version = "0.1.0"
authors = ["hansong.xhs <hansong.xhs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.2.15"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.34.6"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false